@@ -40,6 +40,7 @@ Release date to be decided, codename to be chosen.
 - Always treat `+` as safe when fixing URLs as people love misusing them.
 - Added support to profiling into directories in the contrib profiler.
 - The escape function now by default escapes quotes.
+- Changed repr of exceptions to be less magical.
 
 Version 0.8.4
 -------------
